--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,3 +1,15 @@
+%header.header
+  %h1.header__name ToDo App
+  .header__sub
+    %h3.header__userName
+      = current_user.name
+    %ul.header__iconList
+      %li.header__Icon
+      = link_to '#' do
+        = icon('fas', 'edit')
+      %li.header__Icon
+      = link_to edit_user_path(current_user) do
+        = icon('fas', 'cog')
 .Task
   .dailytask
     %h2.dailytask-name 今日のタスク
@@ -38,3 +50,6 @@
           =task.task
           =task.created_at
           = link_to '削除', task_path(task.id), method: :delete
+
+%footer
+  %p Copyright ToDoアプリ 2020.
