--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -2,11 +2,9 @@
   %h1.header__name ToDo App
   .header__sub
     %h3.header__userName
+      User:
       = current_user.name
     %ul.header__iconList
-      %li.header__Icon
-      = link_to '#' do
-        = icon('fas', 'edit')
       %li.header__Icon
       = link_to edit_user_path(current_user) do
         = icon('fas', 'cog')
