--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -13,6 +13,7 @@ body {
     line-height: 70px;
     font-weight: 900;
     font-family: Comic Sans MS;
+    margin-left: 20px;
   }
   &__sub {
     display: flex;
@@ -22,18 +23,16 @@ body {
       line-height: 70px;
       font-weight: 500;
       font-family: Comic Sans MS;
-      margin-right: 10px;
+      margin-right: 20px;
     }
 
-    ul {
+    &__edit {
       font-size: 20px;
-      padding: 1px;
-      border: solid 1px yellow;
-      list-style: none;
-      line-height: 70px;
-      margin-right: 10px;
+      line-height: 75px;
+      margin-right: 20px;
       text-decoration: none;
       color: #ffffff;
+      font-family: Comic Sans MS;
     }
   }
 }
