--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -1,11 +1,11 @@
 %header.header
   %h1.header__name ToDo App
   .header__sub
-    %h3.header__userName
+    %h3.header__sub__userName
       User:
       = current_user.name
-    %ul.header__edit
-      = link_to 'EDIT', edit_user_path(current_user), method: :get
+    = link_to edit_user_path(current_user), class: "header__sub__edit" do
+      Edit 
 .Task
   .dailytask
     %h2.dailytask-name 今日のタスク
