--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -17,8 +17,8 @@ body {
   }
   &__sub {
     display: flex;
-    h3 {
-      color: rgb(157, 247, 139);
+    &__userName {
+      color: rgb(121, 162, 250);
       font-size: 25px;
       line-height: 70px;
       font-weight: 500;
@@ -27,11 +27,12 @@ body {
     }
 
     &__edit {
+      color: rgb(121, 162, 250);
       font-size: 20px;
+      height: 40px;
       line-height: 75px;
       margin-right: 20px;
       text-decoration: none;
-      color: #ffffff;
       font-family: Comic Sans MS;
     }
   }
