--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -1,6 +1,6 @@
 body {
   background-image: url("http://aquabeauties.com/wp-content/uploads/2020/09/B83A85A4-2A86-4957-B821-FBEE7332BA68.jpg");
-  background-size: auto;
+  background-size: 100% 100%;
 }
 
 .header {
