--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -4,21 +4,25 @@
     %h3.header__sub__userName
       name:
       = current_user.name
-    = link_to edit_user_path(current_user), class: "header__sub__edit" do
-      Edit 
+    %ul
+      = link_to edit_user_path(current_user), class: "edit" do
+        Edit 
 
 .Task
+  .task-group
+    %h2.task-groupname グループ名追加
+
   .dailytask
     %h2.dailytask-name 今日のタスク
     = form_with(url: tasks_path, local: true, method: :post) do |form|
       = form.text_field :task, placeholder: "タスクを追加する", class: 'dailytask-name__text'
-      = form.submit "追加", class: "search-btn"
+      = form.submit "追加", class: "button"
     .option
       - @tasks.each do |task|
         .content
           .content-name
             担当者:
-            = current_user.name
+            = task.user.name
           .content-task
             タスク:
             =task.task
@@ -28,19 +32,6 @@
           .content-opition
             = link_to '完了', task_path(task.id), method: :delete
             = link_to '編集', edit_task_path(task.id), method: :get
-
-
-  .weektask
-    %h2.weektask-name 今週のタスク
-    = form_with(url: tasks_path, local: true, method: :post) do |form|
-      = form.text_field :weektask, placeholder: "タスクを追加する"
-      = form.submit "タスク", class: "search-btn"
-    .option
-      - @tasks.each do |task|
-        %div
-          =task.task
-          = link_to '完了', task_path(task.id), method: :delete
-          = link_to '編集', edit_task_path(task.id), method: :get
 
   .completetask
     %h2.completetask-name 完了タスク
