--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -120,3 +120,19 @@
     font-size: 13px;
   }
 }
+
+.option {
+  height: 100vh;
+  p {
+    font-size: 20px;
+    color: white;
+    margin: 0 0 20px 20px;
+  }
+  .content {
+    background-color:#00FFFF;
+    opacity: 0.7;
+    width: 200px;
+    margin: 10px 0 0 10px;
+    padding-left: 10px;
+  }
+}
