--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -12,35 +12,30 @@
   .task-group
     %h2.task-groupname グループ名追加
 
-  .dailytask
-    %h2.dailytask-name 今日のタスク
+  .task-info
+    %h3.dailytask-name 今日のタスク
+    
     = form_with(url: tasks_path, local: true, method: :post) do |form|
       = form.text_field :task, placeholder: "タスクを追加する", class: 'dailytask-name__text'
       = form.submit "追加", class: "button"
-    .option
-      - @tasks.each do |task|
-        .content
-          .content-name
-            担当者:
-            = link_to task.user.name, user_path(task.user.id)
-          .content-task
-            タスク:
-            =task.task
-          .content-time
-            作成日:
-            =task.created_at.strftime('%m/%d')
-          .content-opition
-            = link_to '完了', task_path(task.id), method: :delete
-            = link_to '編集', edit_task_path(task.id), method: :get
+
+    - @tasks.each do |task|
+      .content
+        .content-name
+          担当者:
+          = link_to task.user.name, user_path(task.user.id)
+        .content-task
+          タスク:
+          =task.task
+        .content-time
+          作成日:
+          =task.created_at.strftime('%m/%d')
+        .content-opition
+          = link_to '完了', task_path(task.id), method: :delete
+          = link_to '編集', edit_task_path(task.id), method: :get
 
   .completetask
     %h2.completetask-name 完了タスク
-    .option
-      - @tasks.each do |task|
-        %div
-          =task.task
-          =task.created_at
-          = link_to '削除', task_path(task.id), method: :delete
 
 %footer
   %p Copyright ToDoアプリ 2020.
