--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -16,32 +16,82 @@ body {
     margin-left: 20px;
   }
   
-  &__sub {
-    display: flex;
-    &__userName {
-      color: rgb(121, 162, 250);
-      font-size: 25px;
+  a {
+    text-decoration: none;
+  }
+  
+  ul {
+
+    .heder__info {
+      color: rgb(173, 184, 247);
+      font-size: 28px;
       line-height: 70px;
-      font-weight: 500;
+      font-weight: 600;
       font-family: Comic Sans MS;
-      margin-right: 20px;
+      margin-right: 50px;
     }
 
-    ul {
-      .edit {
-        border: solid 1px yellow;
-        padding: 5px;
-        color: rgb(121, 162, 250);
-        font-size: 20px;
+    li {
+      position: relative;
+      float: left;
+      width: 100%;
+      height: 55px;
+
+      a {
+        display: block;
+        line-height: 40px;
+        color: rgb(157, 247, 139);
+
+        &:hover {
+          background: black;
+          color: #fff;
+        }
+      }
+
+      ul {
+        position: absolute;
+        z-index: 100;
+        top: 100%;
+        left: 0;
+        width: 200px;
+
+        li {
+          overflow: hidden;
+          width: 100%;
+          height: 0;
+          background: rgb(173, 184, 247);
+
+          a {
+            display: block;
+            color:  white;
+            font-size: 20px;
+          }
+        }
+      }
+
+      &:hover > ul > li {
+        overflow: visible;
         height: 40px;
-        line-height: 75px;
-        margin-right: 20px;
-        text-decoration: none;
-        font-family: Comic Sans MS;
+      }
+
+      ul:before {
+        position: absolute;
+        content: "";
+        top: -20px;
+        right: 16px;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-top-color: white;
+      }
+
+      &:hover ul:before {
+        border-top-color: rgb(157, 247, 139);
       }
     }
   }
 }
+
 
 .Task {
   display: flex;
