--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -43,8 +43,8 @@ body {
         color: rgb(157, 247, 139);
 
         &:hover {
-          background: black;
-          color: #fff;
+          background: white;
+          color: rgb(173, 184, 247);
         }
       }
 
@@ -81,12 +81,12 @@ body {
         right: 16px;
         width: 0;
         height: 0;
-        border: 5px solid transparent;
-        border-top-color: white;
+        border: 6px solid transparent;
+        border-top-color: rgb(173, 184, 247);
       }
 
       &:hover ul:before {
-        border-top-color: rgb(157, 247, 139);
+        border-top-color: white;
       }
     }
   }
