--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -144,6 +144,39 @@ body {
   }
 }
 
+.Task-edit {
+  height: 100vh;
+  width: 100vw;
+  .task {
+    h3 {
+      color: yellowgreen;
+      font-size: 20px;
+      text-decoration: underline;
+      margin: 10px 0 10px 10px;
+    }
+    form {
+      margin-left: 10px;
+      .button {
+        display       : inline-block;
+        border-radius : 50%;
+        font-size     : 11pt;
+        text-align    : center;
+        cursor        : pointer;
+        padding       : 8px 7px;
+        background    : #ffff1a;
+        color         : #000000;
+        line-height   : 1em;
+        transition    : .3s;
+        border        : 2px solid #ffff1a;
+      }
+      .button:hover {
+        color         : #ffff1a;
+        background    : #000000;
+      }
+    }
+  }
+}
+
 footer {
   height: 30px;
   background-color: black;
