--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -3,4 +3,5 @@
     %h3.dailytask-name タスクの編集
     = form_with(url: task_path, local: true, method: :PATCH) do |form|
       = form.text_field :task, placeholder: "タスクを変更する", class: 'dailytask-name__text'
+      = form.text_area :details, placeholder: "タスクを追加する", class: 'dailytask-name__text'
       = form.submit "変更", class: "button"
