--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -19,23 +19,25 @@
   .task-info
     %h3.dailytask-name 今日のタスク
     
-    = form_with(url: tasks_path, local: true, method: :post) do |form|
+    = form_with(url: tasks_path, local: true, ) do |form|
       = form.text_field :task, placeholder: "タスクを追加する", class: 'dailytask-name__text'
+      = form.text_area :detalis, placeholder: "詳細(締め切り日、概要など)"
       = form.submit "追加", class: "button"
 
     - @tasks.each do |task|
       .content
-        .content-name
-          担当者:
-          = link_to task.user.name, user_path(task.user.id)
-        .content-task
-          タスク:
-          =task.task
+        .content-main
+          .content-name
+            担当者:
+            = link_to task.user.name, user_path(task.user.id)
+          .content-task
+            タスク:
+            =task.task
+          .content-opition
+            = link_to '完了', task_path(task.id), method: :delete
+            = link_to '編集', edit_task_path(task.id), method: :get
         .content-details
-          = link_to '※詳細', task_path(task.id), method: :get
-        .content-opition
-          = link_to '完了', task_path(task.id), method: :delete
-          = link_to '編集', edit_task_path(task.id), method: :get
+          =task.detalis
 
   .completetask
     %h2.completetask-name 完了タスク
