--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -44,7 +44,7 @@ body {
 
         &:hover {
           background: white;
-          color: rgb(173, 184, 247);
+          color: black;
         }
       }
 
@@ -104,6 +104,7 @@ body {
   .task-info {
     width: 700px;
     border: solid 1px yellow;
+  
     h3 {
       color: yellowgreen;
       font-size: 20px;
@@ -111,8 +112,20 @@ body {
       margin: 10px 0 10px 10px;
     }
     form {
-      margin-left: 10px;
+      .text {
+        color: white;
+        width: 200px;
+        margin-left: 10px;
+      }
+      .textarea {
+        white-space: pre-wrap;
+        width: 680px;
+        height: 50px;
+        margin-left: 5px;
+        display: flex;
+      }
       .button {
+        margin-left: 15px;
         display       : inline-block;
         border-radius : 50%;
         font-size     : 11pt;
@@ -121,7 +134,6 @@ body {
         padding       : 8px 7px;
         background    : #ffff1a;
         color         : #000000;
-        line-height   : 1em;
         transition    : .3s;
         border        : 2px solid #ffff1a;
       }
@@ -134,14 +146,14 @@ body {
       display: flex;
       .content-main {
         background-color:#00FFFF;
-        opacity: 0.7;
+        opacity: 0.8;
         width: 180px;
         margin: 10px 0 0 10px;
         padding-left: 10px;
       }
       .content-details {
         background-color:#00FFFF;
-        opacity: 0.7;
+        opacity: 0.8;
         width: 400px;
         margin: 10px 0 0 10px;
         padding-left: 10px;
@@ -149,6 +161,7 @@ body {
     }
   }
   .completetask {
+    color: white;
     width: calc(100vw - 950px);
     border: solid 1px yellow;
   }
