--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -14,7 +14,7 @@
 
 .Task
   .task-group
-    %h2.task-groupname グループ名追加
+    %h2.task-groupname グループ追加
 
   .task-info
     = form_with(url: tasks_path, local: true,) do |form|
