--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -8,7 +8,7 @@
         %li
           %a{href: user_path(current_user)} マイページ
         %li
-          %a{href: "#"} グループ作成
+          %a{href: new_group_path} グループ作成
         %li
           %a{href: edit_user_path(current_user)} アカウント編集
 
