--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -96,45 +96,28 @@ body {
 .Task {
   display: flex;
   height: calc(100vh - 100px);
-  .task-group {
-    width: 250px;
-    border: solid 1px yellow;
-    color: white;
-  }
+  font-size: 16px;
   .task-info {
-    width: 700px;
+    color: yellow;
+    width: 210px;
     border: solid 1px yellow;
-    form {
-      .text {
-        color: yellow;
-        width: 200px;
-        margin-left: 10px;
-      }
-      .textarea {
-        white-space: pre-wrap;
-        width: 610px;
-        height: 50px;
-        margin-left: 5px;
-        display: flex;
-      }
-      .button {
-        margin-left: 10px;
-        display       : inline-block;
-        border-radius : 50%;
-        font-size     : 11pt;
-        text-align    : center;
-        cursor        : pointer;
-        padding       : 8px 7px;
-        background    : #ffff1a;
-        color         : #000000;
-        transition    : .3s;
-        border        : 2px solid #ffff1a;
-      }
-      .button:hover {
-        color         : #ffff1a;
-        background    : #000000;
-      }
+    .text {
+      color: yellow;
+      width: 200px;
     }
+    .textarea {
+      white-space: pre-wrap;
+      height: 400px;
+      width: 200px;
+    }
+    .button {
+      margin-top: 10px;
+      width: 100px;
+    }
+  }
+  .task-content {
+    width: calc(100vw - 210px);
+    border: solid 1px yellow;
     .content {
       display: flex;
       .content-main {
@@ -163,8 +146,6 @@ body {
           }
         }
       }
-
-
       .content-details {
         background-color:#00FFFF;
         opacity: 0.8;
@@ -173,11 +154,6 @@ body {
         padding: 5px;
       }
     }
-  }
-  .completetask {
-    color: white;
-    width: calc(100vw - 950px);
-    border: solid 1px yellow;
   }
 }
 
