--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -13,20 +13,16 @@
           %a{href: edit_user_path(current_user)} アカウント編集
 
 .Task
-  .task-group
-    %h2.task-groupname グループ追加
-
   .task-info
-    = form_with(url: tasks_path, local: true,) do |form|
+    = form_with(url: tasks_path, local: true, class: 'Form') do |form|
+      タスク追加
       .text 
-        %p タスク内容
-        = form.text_field :task, placeholder: "タスクを追加する"
-        タスクの詳細
+        = form.text_field :task, placeholder: "タスク内容"
       .textarea 
         = form.text_area :detalis, placeholder: "締め切り日/概要", class: 'textarea'
         = form.submit "追加", class: 'button'
 
-
+  .task-content
     - @tasks.each do |task|
       .content
         .content-main
@@ -44,11 +40,6 @@
             = link_to '編集✏️', edit_task_path(task.id), class: 'edit', method: :get
         .content-details
           = simple_format(h(task.detalis))
-  .completetask
-    %h2.completetask-name 完了タスク
-
-
-
 
 %footer
   %p Copyright ToDoアプリ 2020.
