--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -17,10 +17,10 @@
     = form_with(url: tasks_path, local: true, class: 'Form') do |form|
       タスク追加
       .text 
-        = form.text_field :task, placeholder: "タスク内容"
+        = form.text_field :task, placeholder: "タスク内容", class: 'form-text'
       .textarea 
-        = form.text_area :detalis, placeholder: "締め切り日/概要", class: 'textarea'
-        = form.submit "追加", class: 'button'
+        = form.text_area :detalis, placeholder: "締め切り日/概要", class: 'textarea', class: 'form-text'
+        = form.submit "追加", class: 'button', class: 'form-submit'
 
   .task-content
     - @tasks.each do |task|
@@ -38,7 +38,7 @@
             %p /
             %li
             = link_to '編集✏️', edit_task_path(task.id), class: 'edit', method: :get
-        .content-details
+        .content-detalis
           = simple_format(h(task.detalis))
 
 %footer
