--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -101,14 +101,15 @@ body {
     color: yellow;
     width: 220px;
     border: groove 5px skyblue;
-    .text {
+    .form-text {
       color: yellow;
       width: 200px;
     }
-    .textarea {
+    .form-detalis {
       white-space: pre-wrap;
       height: 450px;
-      width: 205px;
+      width: 200px;
+      margin-top: 10px;
     }
     .button {
       margin-top: 10px;
@@ -116,7 +117,7 @@ body {
     }
   }
   .task-content {
-    width: calc(100vw - 220px);
+    width: 900px;
     border: groove 5px skyblue;
     .content {
       display: flex;
@@ -154,6 +155,10 @@ body {
         padding: 5px;
       }
     }
+  }
+  .task-complete {
+    width: calc(100vw - 1120px);
+    border: groove 5px skyblue;
   }
 }
 
