--- a/app/assets/stylesheets/modules/tasks.scss
+++ b/app/assets/stylesheets/modules/tasks.scss
@@ -96,29 +96,63 @@ body {
 .Task {
   display: flex;
   height: calc(100vh - 100px);
-  .task-info {
-    font-size: 18px;
-    color: yellow;
-    width: 220px;
+  .task-group {
+    width: 250px;
     border: groove 5px skyblue;
-    .form-text {
+    p {
       color: yellow;
-      width: 200px;
+      font-size: 18px;
+      margin: 5px 0 5px 5px;
+    }
+  }
+  .task-info {
+    width: 200px;
+    border: groove 5px skyblue;
+    p {
+      color: yellow;
+      font-size: 18px;
+      margin: 5px 0 5px 5px;
+    }
+    .form-text {
+      width: 190px;
+      margin: 0px 5px 0 5px;
     }
     .form-detalis {
       white-space: pre-wrap;
       height: 450px;
-      width: 200px;
-      margin-top: 10px;
+      width: 190px;
+      margin: 10px 5px 0 5px;
     }
-    .button {
-      margin-top: 10px;
-      width: 100px;
+    .form-submit {
+      margin: 10px 10px 0 10px;
+      width: 180px;
+      display       : inline-block;
+      border-radius : 20%;
+      font-size     : 22px;
+      text-align    : center;
+      cursor        : pointer;
+      padding       : 8px 0px;
+      background    : #ffff1a;
+      color         : #000000;
+      line-height   : 1em;
+      transition    : .3s;
+      box-shadow    : 4px 4px 7px #666666;
+      border        : 2px solid #ffff1a;
+    }
+    .form-submit:hover {
+      box-shadow    : none;
+      color         : #ffff1a;
+      background    : #000000;
     }
   }
   .task-content {
-    width: 900px;
+    width: 700px;
     border: groove 5px skyblue;
+    .task-name {
+      color: yellow;
+      font-size: 18px;
+      margin: 5px 0 5px 10px;
+    }
     .content {
       display: flex;
       .content-main {
@@ -127,21 +161,44 @@ body {
         width: 180px;
         margin: 10px 0 0 10px;
         padding: 5px;
-        .content-option {
-          display: flex;
-          .complete{
-            text-decoration: none;
-            padding-right: 15px;
-            color: red;
-          }
-          .edit {
-            text-decoration: none;
-            padding-left: 15px;
-            color: red;
-          }
-          .complete:hover { 
-            font-weight: 600;
-          }
+        .edit {
+          list-style: none;
+          text-decoration: none;
+          color: blue;
+        }
+        .delete {
+          list-style: none;
+          text-decoration: none;
+          color: blue;
+          border: none;
+          background-color: transparent;
+          cursor : pointer;
+        }
+      }
+      .content-option {
+        .complete{
+          text-decoration: none;
+          margin: 25px 0 0 10px;
+          display       : inline-block;
+          border-radius : 50%;
+          font-size     : 20pt;
+          text-align    : center;
+          cursor        : pointer;
+          padding       : 10px 5px;
+          background    : skyblue;
+          color         : white;
+          line-height   : 1em;
+          transition    : .3s;
+          box-shadow    : 4px 4px 7px #666666;
+          border        : 2px solid #ffffff;
+        }
+        .complete:hover {
+          box-shadow    : none;
+          color         : red;
+          background    : white;
+        }
+        .complete:hover { 
+          font-weight: 600;
         }
       }
       .content-main:hover {
@@ -157,8 +214,21 @@ body {
     }
   }
   .task-complete {
-    width: calc(100vw - 1120px);
+    width: calc(100vw - 1150px);
     border: groove 5px skyblue;
+    p {
+      color: yellow;
+      font-size: 18px;
+      margin: 5px 0 5px 10px;
+    }
+    .complete-list {
+      list-style: none;
+      color: blue;
+      opacity: 0.8;
+      width: 180px;
+      margin: 0 0 0 5px;
+      padding: 5px;
+    }
   }
 }
 
@@ -166,25 +236,49 @@ body {
   height: 100vh;
   width: 100vw;
   .task {
-    h3 {
-      color: yellowgreen;
-      font-size: 20px;
-      margin: 10px 0 10px 10px;
+    margin-left: 450px;
+    padding-top: 50px;
+    p {
+      color: yellow;
+      font-size: 40px;
+      margin-left: 125px;
+      font-weight: 500;
     }
     form {
-      margin-left: 10px;
+      .text {
+        .content {
+          width: 500px;
+          margin: 10px auto 0 auto;
+        }
+      }
+      .textarea {
+        .area {
+          white-space: pre-wrap;
+          height: 450px;
+          width: 500px;
+          margin: 10px auto 0 auto;
+        }
+      }
       .button {
+        margin: 10px 10px 0 55px;
+        width: 400px;
         display       : inline-block;
-        border-radius : 50%;
-        font-size     : 11pt;
+        border-radius : 20%;
+        font-size     : 22px;
         text-align    : center;
         cursor        : pointer;
-        padding       : 8px 7px;
+        padding       : 8px 0px;
         background    : #ffff1a;
         color         : #000000;
         line-height   : 1em;
         transition    : .3s;
+        box-shadow    : 4px 4px 7px #666666;
         border        : 2px solid #ffff1a;
+      }
+      .button:hover {
+        box-shadow    : none;
+        color         : #ffff1a;
+        background    : #000000;
       }
       .button:hover {
         color         : #ffff1a;
