--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -13,16 +13,22 @@
           %a{href: edit_user_path(current_user)} アカウント編集
 
 .Task
+  .task-group
+    %p グループ
+
   .task-info
     = form_with(url: tasks_path, local: true, class: 'Form') do |form|
-      タスク追加
+      %p タスク入力
       = form.text_field :task, placeholder: "タスク内容", class: 'form-text'
       = form.text_area :detalis, placeholder: "締め切り日/概要", class: 'textarea', class: 'form-detalis'
-      = form.submit "追加", class: 'button', class: 'form-submit'
+      = form.submit "タスク追加", class: 'form-submit'
 
   .task-content
+    .task-name
+      %p タスク一覧
+      %input{:type => "date"}
     - @tasks.each do |task|
-      .content
+      .content{data: {task: {id: task.id}}}
         .content-main
           .content-name
             担当者:
@@ -30,17 +36,19 @@
           .content-task
             タスク:
             =task.task
-          %ul.content-option
-            %li
-            = link_to '完了✔️', class: 'complete'
-            %p /
-            %li
+          .content-edit
             = link_to '編集✏️', edit_task_path(task.id), class: 'edit', method: :get
+            = link_to '削除🗑', task_path(task.id), class: 'delete', method: :delete
         .content-detalis
           = simple_format(h(task.detalis))
+        .content-option
+          %input.complete{:type => "button", :value => "✔︎"}
   
   .task-complete
     %p 完了タスク
+    .complete-list
+      %ul
+        %li.list
     
 
 
